--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.sracs</groupId>
     <artifactId>mpesa-c2b-listener</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>sracs-0.0.2</version>
     <packaging>jar</packaging>
 
     <name>mpesa-c2b-listener</name>
