remove auth details

--- a/src/main/resources/props.properties
+++ b/src/main/resources/props.properties
@@ -2,7 +2,7 @@
 sracs-search-user-url=http://197.248.41.218:7010/MotorBikePublished/v1/users/search?msisdn=
 
 #Basic auth username credentials
-sracs-api-user=MobileUser
+sracs-api-user=#####
 
 #Basic auth password credentials
-sracs-api-password=mobilePassword
+sracs-api-password=#####
